web-server/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8085
      protocol: TCP
      name: http
  selector:
    app: web-server
