web-server/web-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: http
  selector:
    app: web-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      name: web-server
      labels:
        app: web-server
        task: final
    spec:
      containers:
        - image: quay.io/myafk/interactive:stable
          name: web-server
          command: ["interactive", "ingress"]
          ports:
            - containerPort: 8085
